--- a/style.css
+++ b/style.css
@@ -2,11 +2,8 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  zoom: 100%;
   /* box-sizing: inherit; */
-}
-
-html {
-  font-size: 62.5%;
 }
 
 body {
@@ -22,39 +19,37 @@ body {
 }
 
 .show-modal {
-  font-size: 2rem;
+  font-size: 20px;
   font-weight: 600;
-  padding: 1.75rem 3.5rem;
-  margin: 5rem 2rem;
+  padding: 17px 35px;
+  margin: 50px 20px;
   border: none;
   background-color: rgb(27, 226, 209);
   color: #444;
-  border-radius: 10rem;
+  border-radius: 100px;
   cursor: pointer;
-
 }
 
 .close-modal {
   position: absolute;
-  top: 1.2rem;
-  right: 2rem;
+  top: 12px;
+  right: 22px;
   color: rgb(174, 170, 170);
   cursor: pointer;
   border: none;
   background: none;
-  font-size: 2.5rem;
+  font-size: 30px;
 }
 .close-modal:hover {
   color: #333;
 }
 
 h1 {
-  font-size: 2.5rem;
-  margin-bottom: 2rem;
+  margin-bottom: 10px;
 }
 
 p {
-  font-size: 1.8rem;
+  font-size: 18px;
 }
 
 /* -------------------------- */
@@ -68,19 +63,13 @@ p {
   top: 47%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 440px;
+  width: 440px; 
   height: 680px;
-/*   width: 31%;
-  height: 85%; */
   background-color: white;
-  padding: 6rem;
+  padding: 60px 70px;
   border-radius: 5px;
   box-shadow: 0 3rem 5rem rgba(0, 0, 0, 0.3);
   z-index: 10;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  -o-border-radius: 5px;
 }
 
 .overlay {
@@ -97,11 +86,7 @@ p {
 /* END CLASSES TO MAKE MODAL WORK */
 /* -------------------------- */
 
-@media screen and (max-width: 600px){
-  .modal {
-    width: 94%;
-  }
-}
+
 
 .modal .modal-container .img,p,h1 {
   text-align: center;
@@ -126,7 +111,7 @@ p {
   padding: 10px 16px;
 }
 .modal .btn-1 p{
-  margin-top: 30px;
+  margin-top: 20px;
   background-color: #f7a800 ;
   
 }
@@ -162,4 +147,37 @@ p {
   background: none;
   font-size: 20px;
 }
+@media screen and (max-width: 450px){
+  .modal {
+    width: 340px;
+    height: 640px; 
+    padding: 50px 30px 10px;
+    margin-top: 20px;
+  }
+  .close-modal {
+    top: 10px;
+    right: 8px;
+  }
 
+}
+
+@media screen and (max-width: 1024px){
+  .modal {
+    width: 340px;
+    height: 600px; 
+    padding: 50px 30px 0;
+    margin-top: 10px;
+  }
+  .close-modal {
+    top: 10px;
+    right: 8px;
+  }
+  .modal .para-for-sign-in {
+    margin: 10px;
+  }
+  .modal .para-for-General-Terms {
+    font-size: 12px;
+    margin-top: 10px;
+  }
+
+}
